--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,11 +51,11 @@ footer {
 }
 
 #headerwidth {
-    max-width: 960px;
+    width: 100%;
 }
 
 #logo {
-    width: 250px;
+    width: 100%;
     height: 90px;
     background: #4aaaa5;
     float: left;
@@ -69,8 +69,10 @@ footer {
 }
 
 nav {
-    float: right;
+    float: left;
+    width: 100%;
     margin-top: 25px;
+    text-align: center;
 }
 
 nav a {
@@ -111,7 +113,10 @@ nav a:first-child {
 }
 
 .main-section h1 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: 700;
     color: #4aaaa5;
+    font-size: 24px;
 }
 
 .work {
@@ -147,4 +152,15 @@ nav a:first-child {
     line-height: 30px;
     margin-bottom: 0;
     font-weight: 300;
+}
+
+@media (min-width: 768px) {
+    #logo {
+        width: 250px !important;
+    }
+    nav {
+        float: right !important;
+        width: 50% !important;
+        text-align: right !important;
+    }
 }
